fix: eww: slider spacing in volume stuff is fine now.

--- a/bender/dotfiles/eww_bar/eww.scss
+++ b/bender/dotfiles/eww_bar/eww.scss
@@ -47,10 +47,10 @@ button {
 scale trough {
     all: unset;
     background-color: $background;
-    border-radius: 5px;
-    min-height: 3px;
-    min-width: 10px;
-    margin: 0 1px;
+}
+
+scale {
+    padding: 0px 8px 0px 0px;
 }
 
 scale trough slider {
@@ -58,11 +58,15 @@ scale trough slider {
     outline-color: transparent;
     border-color: transparent;
     color: transparent;
+    margin: 0;
     box-shadow: none;
 }
 
 scale trough highlight {
     background-color: $text;
+    border-color: transparent;
+    margin: 8px 0px;
+    border-radius: 1.5px;
 }
 
 .right-bar {
